KSENROLL-12898 - UI: Delete Cluster Screen Term Label Alignment - Fixed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69588 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2154,6 +2154,6 @@ section.uif-disclosure {
     padding: 5px;
 }
 
-#selectTermForRolloverDetails .uif-label {
+#selectTermForRolloverDetails .uif-label, #deleteCluster .uif-label {
   display: inline
 }
